--- a/css/style-2.css
+++ b/css/style-2.css
@@ -13,7 +13,7 @@ a:hover {
   text-decoration: none !important;
 }
 :root {
-  --primary-color: #3289fc;
+  --primary-color: #ceb0f090;
   --bg-color: #030303;
 }
 @font-face {
