--- a/css/style-2.css
+++ b/css/style-2.css
@@ -164,7 +164,8 @@ canvas {
   background: var(--bg-color);
 }
 .feature-img {
-  height: 100%;
+  /* height: 100%; */
+  width: 23rem;
   display: flex;
   margin: 0px auto;
 }
